jilles      2006/01/04 15:34:35 UTC	(20060104-4483)
  Log:
  Remove the Scylla protocol module.
  The Scylla project has long been abandoned.
  

  Changes:	Modified:
  +0 -1		trunk/dist/example.conf (File Modified) 
  +0 -1		trunk/dist/example.userserv.conf (File Modified) 
  +0 -3		trunk/doc/IRCD (File Modified) 
  +0 -1		trunk/protocol/Makefile.in (File Modified) 
  +0 -655	trunk/protocol/scylla.c (File Deleted) 


jilles      2006/01/04 15:24:07 UTC	(20060104-4481)
  Log:
  Extend rejoin on kick from chanserv to all internal clients.
  This also avoids crashes if chanserv is not loaded.
  

  Changes:	Modified:
  +2 -2		trunk/protocol/asuka.c (File Modified) 
  +2 -2		trunk/protocol/bahamut.c (File Modified) 
  +2 -2		trunk/protocol/bircd.c (File Modified) 
  +2 -2		trunk/protocol/charybdis.c (File Modified) 
  +2 -2		trunk/protocol/dreamforge.c (File Modified) 
  +2 -2		trunk/protocol/hyperion.c (File Modified) 
  +2 -2		trunk/protocol/inspircd.c (File Modified) 
  +2 -2		trunk/protocol/ircnet.c (File Modified) 
  +2 -2		trunk/protocol/monkey.c (File Modified) 
  +2 -2		trunk/protocol/plexus.c (File Modified) 
  +2 -2		trunk/protocol/ptlink.c (File Modified) 
  +2 -2		trunk/protocol/ratbox.c (File Modified) 
  +2 -2		trunk/protocol/scylla.c (File Modified) 
  +2 -2		trunk/protocol/shadowircd.c (File Modified) 
  +2 -2		trunk/protocol/sorcery.c (File Modified) 
  +3 -5		trunk/protocol/ultimate3.c (File Modified) 
  +2 -2		trunk/protocol/undernet.c (File Modified) 
  +2 -2		trunk/protocol/unreal.c (File Modified) 


jilles      2006/01/04 14:37:57 UTC	(20060104-4479)
  Log:
  Check each channel's founder has +f after loading
  (add +*-OHV if not).
  

  Changes:	Modified:
  +14 -0	trunk/src/node.c (File Modified) 


jilles      2006/01/04 14:35:38 UTC	(20060104-4477)
  Log:
  Remove the broken nickname linking system.
  
  Rationale:
  
  The implementation doesn't really work right, links basically only