@@ -4,7 +4,7 @@
  *
  * Controls noexpire options for channels.
  *
- * $Id: hold.c 4219 2005-12-27 17:41:18Z jilles $
+ * $Id: hold.c 4487 2006-01-04 23:40:23Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"chanserv/hold", FALSE, _modinit, _moddeinit,
-	"$Id: hold.c 4219 2005-12-27 17:41:18Z jilles $",
+	"$Id: hold.c 4487 2006-01-04 23:40:23Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -54,7 +54,7 @@ static void cs_cmd_hold(char *origin)
 
 	if (*target != '#')
 	{
-		notice(chansvs.nick, origin, "Invalid parameters for \2HOLD\2.");
+		notice(chansvs.nick, origin, STR_INVALID_PARAMS, "HOLD");
 		return;
 	}
 
@@ -94,7 +94,7 @@ static void cs_cmd_hold(char *origin)
 	}
 	else
 	{
-		notice(chansvs.nick, origin, "Invalid parameters for \2HOLD\2.");
+		notice(chansvs.nick, origin, STR_INVALID_PARAMS, "HOLD");
 		notice(chansvs.nick, origin, "Usage: HOLD <#channel> <ON|OFF>");
 	}
 }
