@@ -4,7 +4,7 @@
  *
  * This file contains code for the CService STATUS function.
  *
- * $Id: status.c 4423 2006-01-02 12:47:52Z jilles $
+ * $Id: status.c 4487 2006-01-04 23:40:23Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"chanserv/status", FALSE, _modinit, _moddeinit,
-	"$Id: status.c 4423 2006-01-02 12:47:52Z jilles $",
+	"$Id: status.c 4487 2006-01-04 23:40:23Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -57,7 +57,7 @@ static void cs_cmd_status(char *origin)
 
 		if (*chan != '#')
 		{
-			notice(chansvs.nick, origin, "Invalid parameters specified for \2STATUS\2.");
+			notice(chansvs.nick, origin, STR_INVALID_PARAMS, "STATUS");
 			return;
 		}
 
