@@ -4,7 +4,7 @@
  *
  * Controls noexpire options for accounts.
  *
- * $Id: hold.c 4219 2005-12-27 17:41:18Z jilles $
+ * $Id: hold.c 4487 2006-01-04 23:40:23Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"userserv/hold", FALSE, _modinit, _moddeinit,
-	"$Id: hold.c 4219 2005-12-27 17:41:18Z jilles $",
+	"$Id: hold.c 4487 2006-01-04 23:40:23Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -90,7 +90,7 @@ static void us_cmd_hold(char *origin)
 	}
 	else
 	{
-		notice(usersvs.nick, origin, "Invalid parameters for \2HOLD\2.");
+		notice(usersvs.nick, origin, STR_INVALID_PARAMS, "HOLD");
 		notice(usersvs.nick, origin, "Usage: HOLD <account> <ON|OFF>");
 	}
 }
