@@ -4,7 +4,7 @@
  *
  * Marking for accounts.
  *
- * $Id: mark.c 4219 2005-12-27 17:41:18Z jilles $
+ * $Id: mark.c 4487 2006-01-04 23:40:23Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"userserv/mark", FALSE, _modinit, _moddeinit,
-	"$Id: mark.c 4219 2005-12-27 17:41:18Z jilles $",
+	"$Id: mark.c 4487 2006-01-04 23:40:23Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -102,7 +102,7 @@ static void us_cmd_mark(char *origin)
 	}
 	else
 	{
-		notice(usersvs.nick, origin, "Invalid parameters for \2MARK\2.");
+		notice(usersvs.nick, origin, STR_INVALID_PARAMS, "MARK");
 		notice(usersvs.nick, origin, "Usage: MARK <target> <ON|OFF> [note]");
 	}
 }
